Closed Bug 337983 Opened 18 years ago Closed 18 years ago

model > * > submission makes submit crash

Categories

(Core Graveyard :: XForms, defect)

defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: allan, Assigned: allan)

References

()

Details

(Keywords: fixed1.8.0.5, fixed1.8.1)

Attachments

(1 file)

nsXFormsSubmissionElement::Submit() forgets null-check the rv of GetModel(), so inserting any element in between model and submission makes us crash.
Attached patch PatchSplinter Review
Assignee: aaronr → allan
Status: NEW → ASSIGNED
Attachment #222027 - Flags: review?(doronr)
Attachment #222027 - Flags: review?(doronr) → review+
Attachment #222027 - Flags: review?(aaronr)
Attachment #222027 - Flags: review?(aaronr) → review+
Fixed on trunk
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Whiteboard: xf-to-branch
Keywords: fixed1.8.1
Keywords: fixed1.8.0.5
Whiteboard: xf-to-branch
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: