[XForms] model > * > submission makes submit crash. Bug 337983, r=doronr+aaronr.